--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/free-icon-gps-5169170.png" />
+    <link rel="apple-touch-icon" href="/free-icon-gps-5169170.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>travel_map</title>
+    <title>Travel Map</title>
   </head>
   <body>
     <div id="root"></div>
